[gd_scene load_steps=5 format=4 uid="uid://bkanknipqf0em"]

[ext_resource type="Script" uid="uid://diq0qr0vhhjt8" path="res://scripts/music_manager.gd" id="1_sdmu8"]
[ext_resource type="AudioStream" uid="uid://iafsodlexuob" path="res://assets/music/bgmusic/get-in-here-fantasy-instrumental-164331 (1).mp3" id="2_sdmu8"]
[ext_resource type="AudioStream" uid="uid://vb7wsfml7a25" path="res://assets/music/button/ui-button-click-5-327756.mp3" id="3_sdmu8"]

[sub_resource type="AudioStreamMP3" id="AudioStreamMP3_sdmu8"]
data = PackedByteArray("//uURAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWGluZwAAAA8AAAAWAAAgiAASEhISJSUlJSUxMTExOjo6OjpFRUVFXl5eXl5nZ2dncnJycnJ9fX19hoaGhoaRkZGRnJycnJynp6enp7Ozs7O+vr6+vsfHx8fS0tLS0t3d3d3m5ubm5vHx8fH8/Pz8/P////8AAABQTEFNRTMuMTAwBLkAAAAAAAAAADUgJAMSjQAB4AAAIIjZEacsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA//u0ZAAA8AAAf4AAAAgAAA/wAAABCyD/F5TygAAAAD/CgAAEMkjcTBHKp8l/DjDDVytHrWkgaDp/PKh8d+x0AhQ+ZhMOBxnaJh8XZTDg+cXECHcm5GF1MKCYfHs5Kh87kkEAOmJi/P+hH/yfzt+RifqJtw+fkCYJy7xAIOmHCHl6t314hYXa61zN1ugZ3QgEgEAhguNWrk1OZUIjAICEhITCA/WIzMMJgO2YxHphURnk0eZ4Nz1Oy+6w51mRpTbmskY4wNIkOAKqC3o1B6Dn8bRaiFMPwWyUAi3VgxukVbi9S6HnkbQQUfSghS7C7b/uO+tDBDyXn693piZcZdDBlcVUiL2ff134MosN5d20lTdkqY8LVO/Wufvn3O5Z/vmpjrLHOYY6jWIOcdvP+993msp+19S9uvjcpqSKMrbd43Xfxm7SIcgKBNc///////9c///////820krvxl37Tvyp3Is5Eg/////5wPB8PuAAAAQCAgDAgAAAAAAA8wBgDBfAfA78oO+44c////////////////9yABQMAwEBAGAgNJAKBQDAdGfMuEFMw1TQTSBAHMRQl019xHTCFBCMEUEkwXQNDCyADMJcEcwBQtDERBPMSAFcwTQGjB3AjMCUBYwIwMAE7GoJgQhjTIZyMynNqAMWCXYWCgOljB8ChIGMYdGi4OBjxImHGkCCyszYQxcRCYABA8PEjA4FDihmj5MgBVdJWBTXugaKFRiE8HGomrptGer/mERH8dJjMqhkvmj//u0ZOGAB4Jezn5zRIAowGmdwQACHxVHN7ntAABfgWo7EgBB+qdqr7v4X6lcxTrllLXVc9n/7/iQKxLP1/3pmw+2o1PTX//////////yJ0c4Zh2IxWJY3P////////////+NXKarluM3aW5jUlX/9Mqs6IAoR09+B4AAAAAAAABWAj361rm5+5P71QqAADgAP8YCIRmpxnU0YZFExhYTCxacIhCIKEgBDIOBKecvUTMLgBqrdHKdeleSV5QI6zdnUgqea0/KCCHpN8DTw01gL2xisCBxGVQ1KVsva9f0txulNZpIVrc5Wpo7FrvzmUFYcqZ/d//3lO8rAS3d+Z8AAACiM34H7185+wEBqYQ4RBjYFSmtuA8bsEHc157IePIhhfCbYSmLaZi6CZxYy8YPhYcEqxVAhaMEahgxyfKdBqAosMT8JniTyXYhTpImbSpyIMl/ou+we1TULsl8myHDhKnesYCP8IAqrAoEYFDzfIFuA1wqBFRRacV28T8LZIiDRWpzUST9eyw3JcdZsXYFt9eiV2K/PpOs9GgAAwCfjgNgmIE2Dcc+HGN04QAEPk8+U/hjKACBwAGIgU7mREGcVDY4BwaNBZFs1ISmgPUYGvg8NhAgHFUCTKabErabc9BDzz1C6s1CnVka9IaeCUz7PCYLZIrLcSzslweBux4TqAv2EURrh+cNVsdVkjsaZn2qX856WN7ANBa0G4AAfhlg5jxcSUKB9hecqGrPk/qwxWMOcBwSWGEEpp+qErYYsOhy//uUZNqDE3AqUj9zAAgQACqO4YABUhSzMg9vQuhpBOa08Iycc74wblCGVRZMZz7RUAiChOPiTNk5yOTGgnzf8xjCsVzAy3yYQ1VNM8bAgXUC9Go5qWzEWCgwe/FZlHHlrE6TxL/5/6de1wGzFSI11fyHcxseGTZ9blCKNtDG4/oExEoDL+hMlBOUu8T1AAHAAcMxGC8w/EM4DKNN8yBAkFFck2YBCCYngAY/wkqoXFQuwEHBArdVjQmRF7oEaOixIoJ+OvmzOWg4WVEw0/6BRMq7Vxg0VESKTRqFuSQKY9MNrwFdGckTOzWX6zTl6U61JsqNZ18RvavfTvmd4AAA7AAAHAAWSXMJPWue1OTZ7tvpPY6xFQgEQCAt2rZV9kZ/Y5De+2PdP/yw3sccDgCl5D1AXlSgfAgQAQMBDIlwwYkP9MDKRMyoZASUoYzkaN0AYcQIlXFGkzkz5cX3LONl6Z7Itot/lpYXMQqIZF4gpg/dVVraCNKdRwWBeTb/Vl4Z//t0ZPQNEwwp0JuYSngdIGoaPeIBClynRA28zaCLjOq9gIj8kS7xbbY8L2rtfn+m9oVWXpARAAhMOAwCOw0sXFfiitYXGyfe/WcguAGictnTzUuymWxwutnGjqiiC3T/p9//HQAAElloMmVRJDH9JIJRKFTJLEOojcwkATwqHMPnEiu5MATDoZMZAwweXjCo7MDBYMMRoEgG7GIYzLJiIfpPnFQmKaGsBGGHmAAkwEw6ERCAqtMenOCZBqkAiFFxCMUfU2cRJwAmUZC8ZboOFEIeSyO2zQxCQtkEFC/5fkMGyNeLOFSgJEX7VyWwVUX+CQIsKNOLRMDiJfSKKXMKTqY2wKSf///pWSYMALBqxoB2bui3rAWSrylrKv////+M//uEZPeBM3spzhu5eng5YxntZwk5C1iPPxW3gCC+FKgStHAELPTkZIXYd1x4ZaenM56mMlVK3Bcv//////qngdDdsjJGGMsxVgZG+jLm5LqZ65TcXyYC2v////////xdy6OxRwxONcpZfdh++yKyyp/2VRdnMdZy8DWYIdb/////////////////////+X3LFJY+cr2////////////////61qrlV5VVAAUAcZkygXAFA3GEwNAoEMfXDGx2PZgQatquTRDAFDLIAJjAEpJoJkCZUIlnhUgNHhkwMKPCksAkIQ4nhAAbAtAWsh6g3g4kZoP1YhiicJUjyICzR5L5kW0mF4GNyeJBMWcgMsQ8ZYZsoCyjgm0go5hoQQxHeQ8vjmlEgpKF3+F1Z8LexPAnAMsDQI4rEOJ4hqRM/6ZUIeVxmzY0SNCZPF5ReMy9/5cY//vUZPQACgCDUv5zRILbbnpfzVCgEuzHRV3MACi7ASc/tAAEnDpuXzeVzBM1MS6cRMj5kbf/zQuMmeL5uT6SCi4xjRQRZJSS0lo/////8nDpuXzdRuYGkAAAAAD64SkLEc094zyJgMCgIyiPQwnMoeMDAooARiIApAS1wQgaAYILnXa7FVZNO0xZ7Qm7JnQuEOC8xclUzcZBKx05fCCFPwt+id7BXKeBlJIO5f3HptkOpe0V5q3YYyh+IUdTbx3ncs5VqurfMNVrsUyy7rusuayy7+NWlKgpv/iKyCmAp///9BWwU2EMy/wrgU8FFxQ4DEiVoffa+AB8FPH8jq1kQMeER4qCsFYlDYlDSgaGA0/1grBX8RcSnUYKrEp29QAIAAIHAAayYHM5jKqmpyKomRFEeBTzUoKF5KJUWRNDuraDspIt1g99sHQuPDJ5Y9GUdkzCJUhOjUnuVkOqbEEPdKacaThL5Q8zIbbdqlVEDx48iZxm8ONhPDVpIc7qL6P+0y2gAApqALHAAAAAwgM5QDgGCAosePUMOCexGggAELIKYMSWagm8FQCMLStIhqHgDHAKIk3AAjgIJhlLS1vhhg14qEeOnPRK1w63MoQyleScFCxxfzmjkZSxpgVOKLJ4tzp2VQ0UykWbpNDqcX3JIgYBKlI48Dce2yo0aF0DzQwWVGKiNoo2TT/yVIis4AABct4UTMaiNIkUKlkGchKbf3AGSsqOVuy+hLoYSlUCAAAABwAGfmEASZNsZxMmiQhCBePGNr5IIAU+gIoX0CvRckWVzEpEgVgINm0Jsnlzuy6VL9vRVHXSMmTX4TKlGyaLGb1WuRRXuLAZF4yEholuIxLXEJ5SrW3hqio4vorUPc9LM0b9c/njBzQCKBW8XgAB4QcRnTqM7ioczbOqFqeYoX4YUyW1OVfwOm8YaQRk2ogbdruMnHMIGCxRkTGOQYMDyJNraKl3XFgOCuGE1EOE9So1yulhExFGUT6AeIs6jN9RUma2GWRmfCDZNdIOzOcz//t0ZPEJEyMp0lOYWvgZ4Fl/PeYBDiynPA7hi+B6hSZphJhE+s8nGo1rL+i6Yn8bGDxwlUTMeDyLv4ien7x3tAIAEOABEAUEuaJhGlD35tCbj6ZboF3unVuLjNhdI/T/oyiSkGBVsOI+HyfS5QCAADgAFQAZfISM05KQAwEGSRCJkeUsQiwhchbCLySqrRoMea3S8b6TPXIpHXilBIY1xWDrFb2MMlBIr7pWi3s1CpvB8LUl/ObYP2rJc6/yr8Zi/QSbXJOZbfXSwAI8AAOAAsEVZjNQ+E88yrwAw7aZD5wtFEyJAPKdZjOj4z0C34UGNK/cr6w+gBmAUwkysWNAdToT1IkDJo/y+WDIWDIwMEN2IKeEEOeVKv4ZQ3ZHJ2vu//uEZOePA0wpz9OYYngiIUpfYCMpDGSnPA5h66CzDKfdhKB8MB0wzGtQve+2B51mHCCRG8jKKkznyk3ZgLs3vHrSwR4OqQrNzR+0ajsK6QCwAIA0sWJFiOLMXIVJUnK8CNGlm/DqC1ICQmfapaXUgSfWEjog8wY+e9GFh3QQAAHAAR5Aq2ZYFnotzZDFUsf0kRCMPgjEqQrF+NkJlULpWEjxYcjmqH7492deZYMxLW8glWQsgPOcriwBy+LzDsZkVniyQjhq4Yco2n31i0BopZmeUx/C6HsmIAAAAHgADEZqMCtYZKW1q6QvDZWemX2814fU6CZxS21bMgULyEhEmBhImd9EBBsKHcFXAAlIGr6GNJ5iZkdmRl4TDKD2ZQ3IWJCg5EOjuFMAWmY2B+QnhYoh3birk14UsOhpQDpgaNgiazXkAxK8+lQ0EiWUbVQ1//uEZO+BMuEjz7tcwBoswzoaYQUvCqSTQS3h5KC8DKfRpJVUvCaJJ4vi++GWVZxl7VlNz34owdnh2ZEr28EfhdXBRhIo04O84Qp0yL7hSJwc4a2kpazDq3qiyPA0VLoVcBCSFHJAc3wADCUgyjGBK4TQ7rGsORI3gamGwDASedTSiTjosShQ1UkVLr13FfPBRVbvtSyJe8QzkD9Ugj0mysk7OlMKE5ohpWc5IsbD/xviAtr81gfEwe6KI5CkgAUuAAzE6L0AAxoEzgyQ5K+ByATQr9RLSiv0sBPnYNF8IqRNNV10wMYj//OXXTcx64SvsweMC5l9NuMItxxKyD8XGqSrGfBdgIfQH7PwBmRoharSECRDAHrw2wfQdRBWQh8kQ7LRbqkqEdBV0nSWWqXphK40+wW5MfV4xNfs0SUfO9BpmaHn89phhp7jtIAVKMoA//t0ZP8BEs0nTpt5eUozgsnqZYUbCtSTPS3l4uimBGq895gkVqojH3QSLlDbPncQQixw+iXmZFMMUJXzjYoevGEHJHlXiYye/+nLl8r93xLY/oCkpBYxTDcDScK87lTSl5NHsYDm6WYAXOAAVQkxVQCk8deYv+Y8CApHSSLCwE0BOFmB451R1tmhxx2JXJpPzCWS1jDaVaPakOVvSPRqhfXQloqT3IVFH3sbzHX2pVarbagRMwR6rydjIAASgAAAeABBZ8AZRGEUUYQ2fT0S4JofooWUq2NWdat9ZV3vhYknKGC5emmCnS6GWwqJRLlurbZRyE1jHa7O9nftM4S0iHdKYFE4oyjjZKZ8Z44/FDxAWSAjIqPhJo4s46A5l0hK//uEZPYBEswi0Pt5eOhCxIntaSN5CdSRQ609KekTkqd1h6UUJmRMum3S6QObwcn5GR3qkk016asEiVT1QvjuSh1YkohEsb4gVi6bpVTV1m0ksZNB6ltZf/X6IHAkJqZEpyPFgM8xft2RUOcc0YwQ3RM9iavXVwZ6MhscHA4QR3JzttGNo0EzelGlD9zGRLvudhffm7uKf62Nym+i18cicmd9aqGUGlPJ9wABMhYOIxQPLo+kI5GOnkqJZAY6gyWZiGrZ1Toh/O0vGMbTbUvarrRmIHE88vYAq+oP3mhiOutwn7cUxWpb3aoL6K+psWT/LuAVeorzX2AAEdIAxVIp3EhU5A79jBYDXSkwt15EizGLTk8eUxS/41wmEVuJxkS+ytC47l7yKVS0+J58tFNb1EmHqfG43jtcQ4rYXb8Cw0HMz7WViAgy84YZrpsGPugK//uEZPQBErIlT2t4YehCpDm9YeU/SyCTNy5l4ukiEmd9phmcPkUmjDQwxaC8GDOsIOE5aUzomAuDFO41Umyz3CcbffrCMTx+cgGgoCF7rq6tYYp6s/r0MVfd28zMKCSTDlS+rhhySiTTZaEFIhPqVAstFBPOMyCui8uH0utTxULu4JJYbatmFBjECKuLNXryBSq9KFyLozoiG8EnRB2GySe3NLUZgMmmgUEiihPuAADWB5IXKN7fAIOLWgOhErIgJNkNbTBMk1oa+15X8RHVT3W/WHldahUymHf3jJ0qFmdqgmCUP3EGha78va4ssiWfVhW34grQAwrMETpwAB4imMW8TEeUHFJNLqUTX4g0xQszqjHcEFXZlUVMvxEmkcM7nmVcTFIDcyY3TBgw3iCjCnKpvgwmHdzXOMG5p6rIrRpWOlYsACCRSJTR92AAiRAo//uEROyBEnQnUOtPYlhLRHoNZexFCZSbPa1hguEpkee1h5l8kKJWFAK7AomeNHI1FsGZG1ovBrsEs6U6QhF2SO1ylsUeSucBkphuY6+1jKkfKBTCTpRXSub6z/hRzV6yPyxeEXH9IkKPs2DmDVu7Yl54bNMBBdngiQXtA5qIKU9WcDRIIqUauCnuKMne1iorB4/C6hqEsqTo9vZMVXNhwaltj0jAB422rxTMwq5mkxvlheYjJ9ItTqN01SAaNCJUNPygAB+A46rRo6dyQIKOsdWdTNfUIR4F5sUMPz+XqWGc1Nsia5htTlh7DS9K3ClKZnBVOTtvjVy62JXZEkZoSSLRmrByfS5o+0AAJqiF4UKjmVBBwihSniQqVKXaPDDFCFqVHSIJss9cQLtJzTdCREuxu0WZ38bcTvMErQPXCzffE1fuqtm1yTSvwzWxNLrL//uUROoAEmwnT2sPMvhORMnNZeZfSnifPew9i+E6kqf1h7CtEdvEyDJIAiIFwkgRZUMFQapk/6Jb9l4XGhmPD4NaM7MTOUNJMp9cPuqR0S3661NrD1n9y2QfCllbbIlIH2AaPiwqRWQrvclZ9rAxyMEBApd9yYUSWiqipf5QN6IrHWEC0WTppzPsFHVpHZRW4pjSa9PiGO1xATQJQYVkI4EvY7Sj0thTqdbRLy3xDqrhVZ/NmW7AAMbE1BG0WuHFUJYcVL1EwwsURSDjWHaJIS1FnFqREYes3kcvNXcBfv8pEF4tWb8F3eRH1D029tH7NsB578q7LIyF6ixDiiu6gJSJTQUTroAAVvNi9lwfxnIKoEVpWqzskclGjay2bL+rTTyfW6GhgcMyLMY2bAsGlayBCGUElH3VcdRxx9MNMHsMYk9lAWUdoR2k+/AAlA64lYoaDJvQHTgtVEaGyBEtfmS0lmI1wCqvIZFg7PNL3Qok0nZyN+nQocnLoU2YcecN//uERPiBEkIlT/sMOvhI5KoNYelVCOCXQawkz2kgEuf1liWkcwnfdLSv/lz642UJUWyfuoFpISGd+/u9RyQT4t1rgVyJlGkN1cxU7HbNWDV2q4px8CalFsSPDwt9NQBJgfvlRC773whQ9Lc/2HM/oly4dWA7JFVVZPagABdwh2HSAVQSFFCahwRC2FBYoIRk1IKhp0NhlLUc7byOMJJJqD5e9pGzmGSXXz2WQ70CuX1sPZy4jUvn17CcR89AsKroyrrtgAAiuAhJ/ByhhgVKLPeZ6QGIKRCya2IRc8rt6xVE2/jybzNP04iEFWCQKmdvE4i+xdi+bQv+nJL7/2l20LkOyfwpdZpU/89oF4noEVLCkYUmLK2TeNNpIhB0BxuPpcHsTrFR5IpUtDDaQ6IYzqIwIjFKh5gTJSG287KQYUUteXZuviqPXEyEzUEDtCO6//t0ZP4AEnYlT2svSvhFBKnPZwgPSYCVQewxLyD7jCg9nCQ1vbvmmiDKLwKO3ZYYvWyR6wPMgMXRTWSVE/DoimUhulxveoC4cKtEvnKiN6sBCXEvKD/ZHjO9ISXcXz7qhcFX5yKCakBFhndkdr/AAChC83YK4EQi3JEjNHUv4mGky991WEah3L1x95dRq8DYQ7XehGje5Elh77KxiPQPrtaGa2j8fvn7TRocQ9G5OI6TSamsAE0jIjEZhqkJhCXKHgORokWljrVidlSLwvLZCS21qZxWIcixWbUdxKLOfDP3W7+CzTonnf8a/Zc/dnqRHOfcksJE0+07m3ukBVtFkFFfRh4omXeWBhllnWpjYZJkIz1L1DbhrW5FswRqr1bD//uEROyBEkckTvsvMnpHhKn/YelNCPiPOawxKykfkie9h6VsHprh1Q3OSSL6Jo7plJV1fX4KHK044ghqiMgaIiIk7V9BZhuQPTIRSgJAUsuOK6UVfdvsGDHwvTCScaPPipaiLgzjGyxdHOUAi3XpKTruur4pi68Vmkpwt9ZZ9y8JHndZyODU0ZFnAACexjJxgVB2JYMXkwwJGpxwYlunSl3FcVqMra88VFauPBp/mpYtIdIybq4S5x2ellZcdm2Z0a5qD4jxb5SOElwlEJqIV/zxckgKyPRM6tSMAAQ+ayYsMdiZmIGP6TiN4WC33RZCA6SWCzI1oy9BPTolcEJLk+hepldVG82k3M+vl78LvA5M5LnXZQxeTgRRDo0Mhn+03YhMfPIgA842bDqCA2IBGskFd9m6/28gxmk5Ok+ITR+lKUfQIJpAqnV4kqOyoWD2//uERPKBEjskzvsMSzhGJKlsZeZrCGSXOawwzWEgkuY9liWVSx4RmeL4jWTa7W2R8stFCwXly+iLoKFCQ7pLYhHYkMUInj8VzM2SxnSCYuIwMOO4ulS9ejMrqz88DBh0jCGQHd+VSvum3ofPxfjK9ZvNWHNEICpRCCNmJBElwAAb0VWso5NGIJ3HgaXEFKmIAXLWY0RrSsOQdkshkx7P2enmnMvIrZBXAfZHi2ldK7tb3eavnbfPXI1TUEyKFM7M5mr/wABcCrywrOqZxQn1+1FRY90mQyL3CgeF6hhlP6lqVpVXuoCw0Z4harjmKCHsl2GTDG0J8ZBKR4A4aGZ0RS+l2jKXZGTSmGgAlYlHktjIhRWIkb1RHt2HXmw4/RqpByVC6Z4rrI17jgjf0qr6lIpoxtFEJyq+kIATTz6k1jXVJhLPCrCPfxL024kcQ4GS//t0ZPwBEnslSmtLTKJEgxlvZelJSfSVMexlhWjtkaV1h6ElyUWNi8Oo5T7KZiywELpOWE1oYAMzle/eQg/0Mg+DNRsDU9t6my/9/E3bipWiyuFvrvLvqgAA8QyEVA0JAhFRsFgqrgGZIFRUkaLa8CaBoTySxJ32Fk1SGyVAJBGJxOHRuKEQRlz7pULM/BuZPiqqv2vHfRmScz/////////VoIWjEiH+ABKSGKcACwMTWHJ8tQVQLfExy4+55E1gnKQSsmZJ/jWfXxkgltYbQvYuH0NCRIrcUQXjNnjOWDyVw8z/////////8DC9ogLCphB8owpLK63axSw+MJnEWZVItizqeo3LBgMZaoDoIkUu/XRBuUo7pooXTr1onkXa//uEZOqBEickSnsHS4I+JImPZUOHSNyVK+ykz2Dyj6W9laWM8HBR1b1yDWCCwHUVqev/////////10qi2jHtPCpkkKwO6RyNyAZGDbSQNlEkVGPUlpCIFNHwyceEFyusgZ6egNmMOLnhLoJD6nOApY3//////////rp97lFiMeBQkFixqprNbgAyCYIKLBAGXwPDkIuWs0uJKPA0DQNAqdhr////////////sLZEtiI68qAjQNUzKCABiJKCui4S5GC1EmeLpdQdReTRb/Uy0ei3/3/70c3m07GdSoX0cKyaTEFNRTMuMTAwqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq//uEZP0BEoYgSWssS1hQ48jMYeNPCYBxG6ywS4EDimM1hhUgqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq//skRPuP8YUHxME4YAAq7YiINAK+AAAB/gAAACAAAD/AAAAEqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq")

[node name="MusicManager" type="Node"]
script = ExtResource("1_sdmu8")

[node name="background_music" type="Node" parent="."]

[node name="bgmusic" type="AudioStreamPlayer2D" parent="background_music"]
stream = ExtResource("2_sdmu8")
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="back_sounds" type="Node" parent="."]

[node name="btn_entersfx" type="AudioStreamPlayer" parent="back_sounds"]
stream = ExtResource("3_sdmu8")
volume_db = -3.0
pitch_scale = 3.0
bus = &"SFX"

[node name="btn_backsfx" type="AudioStreamPlayer" parent="back_sounds"]
stream = ExtResource("3_sdmu8")
volume_db = -3.0
pitch_scale = 2.0
bus = &"SFX"

[node name="btn_clearsfx" type="AudioStreamPlayer" parent="back_sounds"]
stream = SubResource("AudioStreamMP3_sdmu8")
pitch_scale = 0.8
bus = &"SFX"
